k8s/overlays/qa/patches/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crm-app
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: crm-app
          image: asia-south1-docker.pkg.dev/project-9d6eea74-2241-463d-879/crm-saas-prod/crm-saas-app:latest
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
